python/test-data/testTypesReturn.err
Traceback (most recent call last):
  File "test-data/testTypesReturn.py", line 8, in <module>
    foo(False)
WyppTypeError: got value of wrong type
given:    'you stupid'
expected: value of type int

context: foo(flag: bool) -> int
                            ^^^
declared at: test-data/testTypesReturn.py:1
caused by: test-data/testTypesReturn.py:6
  |         return 'you stupid'
